--- a/guide.tex
+++ b/guide.tex
@@ -160,7 +160,7 @@ many other things better too).
     training.
   \end{enumerate}
 \item
-  Administer the \href{\{\{site.training_post_survey\}\}}{post-training
+  Administer the \href{\{\{site.training\_post\_survey\}\}}{post-training
   survey}.
 \item
   Email attendees about
@@ -233,7 +233,7 @@ Sessions}\label{between-instructor-training-sessions}
   \href{\{\{\%20page.root\%20\}\}/files/messages/completion.txt}{the
   completion message}.
 \item
-  Badge instructors in \href{\{\{\%20site.amy_site\%20\}\}/}{AMY}.
+  Badge instructors in \href{\{\{\%20site.amy\_site\%20\}\}/}{AMY}.
 
   \begin{enumerate}
   \def\labelenumii{\arabic{enumii}.}
@@ -252,7 +252,7 @@ Sessions}\label{between-instructor-training-sessions}
   \end{enumerate}
 \item
   Create and send
-  \href{\{\{\%20site.swc_github\%20\}\}/certification}{PDF
+  \href{\{\{\%20site.swc\_github\%20\}\}/certification}{PDF
   certificates}. \{: .checklist\}
 \end{enumerate}
 \end{quote}
@@ -486,7 +486,7 @@ follow.
   pointing it out, and redoes the command.
 \end{itemize}
 
-\textbf{\href{https://youtu.be/SkPmwe_WjeY}{Part 2}: how to do it right}
+\textbf{\href{https://youtu.be/SkPmwe\_WjeY}{Part 2}: how to do it right}
 
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
@@ -827,11 +827,11 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/shell-novice/03-create/}{03-create}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/03-create/}{03-create}
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/shell-novice/05-loop/}{05-loop}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/05-loop/}{05-loop}
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/shell-novice/06-script/}{06-script}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/shell-novice/06-script/}{06-script}
   \end{itemize}
 \item
   SWC, python gapminder
@@ -839,7 +839,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/python-novice-gapminder/06-libraries/}{06-libraries}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-gapminder/06-libraries/}{06-libraries}
   \end{itemize}
 \item
   SWC, python novice inflammation
@@ -847,9 +847,9 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/python-novice-inflammation/03-lists/}{03-lists}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-inflammation/03-lists/}{03-lists}
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/python-novice-inflammation/06-func/}{06-func}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/python-novice-inflammation/06-func/}{06-func}
   \end{itemize}
 \item
   SWC, Automation and Make
@@ -857,7 +857,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/make-novice/03-variables/}{03-variables}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/make-novice/03-variables/}{03-variables}
   \end{itemize}
 \item
   SWC, SQL
@@ -865,7 +865,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/sql-novice-survey/02-sort-dup/}{02-sort-dup}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/sql-novice-survey/02-sort-dup/}{02-sort-dup}
   \end{itemize}
 \item
   SWC, Matlab
@@ -873,7 +873,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/matlab-novice-inflammation/03-loops/}{03-loops}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/matlab-novice-inflammation/03-loops/}{03-loops}
   \end{itemize}
 \item
   SWC, R for Reproducible Scientific Analysis
@@ -881,7 +881,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.swc_pages\%20\}\}/r-novice-gapminder/07-control-flow/}{07-control-flow}
+    \href{\{\{\%20site.swc\_pages\%20\}\}/r-novice-gapminder/07-control-flow/}{07-control-flow}
   \end{itemize}
 \item
   DC, python ecology
@@ -889,7 +889,7 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.dc_site\%20\}\}/python-ecology-lesson/02-index-slice-subset}{02-index-slice-subset}
+    \href{\{\{\%20site.dc\_site\%20\}\}/python-ecology-lesson/02-index-slice-subset}{02-index-slice-subset}
   \end{itemize}
 \item
   DC R ecology
@@ -897,25 +897,24 @@ Demos}\label{example-starting-points-for-demos}
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.dc_site\%20\}\}/R-ecology-lesson/04-dplyr.html}{04-dplyr}
+    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/04-dplyr.html}{04-dplyr}
   \item
-    \href{\{\{\%20site.dc_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html}{05-visualization-ggplot2.html}
+    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html}{05-visualization-ggplot2.html}
     (actually,
-    \href{\{\{\%20site.dc_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html\#plotting-with-ggplot2}{plotting-with-ggplot2})
+    \href{\{\{\%20site.dc\_site\%20\}\}/R-ecology-lesson/05-visualization-ggplot2.html\#plotting-with-ggplot2}{plotting-with-ggplot2})
   \end{itemize}
 \end{itemize}
 
 \subsection{Terms}\label{terms}
 
-\begin{quote}
-\subsection{Something to Think About}\label{something-to-think-about}
+\begin{discussion}{Something to Think About}{disc:something-to-think-about}
 
 Throughout the day, take note of how this training is structured. What
 pieces exemplify the situated learning perspective, i.e., how are you,
 as an instructor-in-training, being brought into a new community of
 practice? Are there any places where we are using the cognitivist
-ideas/techniques described later in the training? \{: .discussion\}
-\end{quote}
+ideas/techniques described later in the training?
+\end{discussion}
 
 \begin{quote}
 \subsection{Who Decides?}\label{who-decides}
@@ -950,12 +949,11 @@ teaching and how to get learners to confront it. \{: .challenge\}
 
 \subsection{Performance and Feedback}\label{performance-and-feedback}
 
-\begin{quote}
-\subsection{The Two-Dimensional You}\label{the-two-dimensional-you}
+\begin{discussion}{The Two-Dimensional You}{disc:the-two-dimensional-you}
 
 If you were a cartoon character teacher, who would you be? What does
-that say about your teaching style? \{: .discussion\}
-\end{quote}
+that say about your teaching style?
+\end{discussion}
 
 \begin{quote}
 \subsection{Feedback on Feedback}\label{feedback-on-feedback}
@@ -1077,8 +1075,8 @@ improve some of the weak objectives?
 Objectives}\label{classify-learning-objectives}
 
 Choose one topic from a
-\href{\{\{\%20site.dc_site\%20\}\}/lessons/}{Data Carpentry} or
-\href{\{\{\%20site.swc_site\%20\}\}/lessons/}{Software Carpentry} lesson
+\href{\{\{\%20site.dc\_site\%20\}\}/lessons/}{Data Carpentry} or
+\href{\{\{\%20site.swc\_site\%20\}\}/lessons/}{Software Carpentry} lesson
 lesson and classify its learning objectives according to their level in
 Bloom's Taxonomy. \{: .challenge\}
 \end{quote}
@@ -1341,9 +1339,9 @@ survivor bias.
 The Carpentries' greatest weakness is a lack of systematic assessment:
 while we have done some small-scale studies of the impact we have on our
 learners, and Dr.~Beth Duckles' studies of
-\href{\{\{\%20site.swc_site\%20\}\}/files/bib/duckles-instructor-engagement-2016.pdf}{why
+\href{\{\{\%20site.swc\_site\%20\}\}/files/bib/duckles-instructor-engagement-2016.pdf}{why
 instructors join us} and
-\href{\{\{\%20site.swc_site\%20\}\}/files/bib/duckles-non-instructor-report-2016.pdf}{why
+\href{\{\{\%20site.swc\_site\%20\}\}/files/bib/duckles-non-instructor-report-2016.pdf}{why
 people qualify but then don't teach} are very insightful, we still don't
 know what learners actually adopt or what effect it has on their
 productivity, the reproducibility of their work, and so on.
