--- a/reference.tex
+++ b/reference.tex
@@ -36,7 +36,7 @@
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Everyone in our community is required to abide by our
-  \href{\{\{\%20site.swc_site\%20\}\}/conduct/}{Code of Conduct}, both
+  \href{\{\{\%20site.swc\_site\%20\}\}/conduct/}{Code of Conduct}, both
   at workshops and online, to ensure that everyone else feels welcome.
 \item
   You teach our material, not your own, and you need to work through the
@@ -438,7 +438,7 @@ Compares teachers' opinions about common programming errors with data
 from over 100,000 students, and finds only weak consensus amongst
 teachers and between teachers and data.
 \item[Carroll, Smith-Kerker, Ford, and Mazur-Rimetz:
-``\href{http://dx.doi.org/10.1207/s15327051hci0302_2}{The Minimal
+``\href{http://dx.doi.org/10.1207/s15327051hci0302\_2}{The Minimal
 Manual}'' \emph{Human--Computer Interaction}, 3:2, 123-153, 1987.]
 Outlines an approach to documentation and instruction in which each
 lesson is one page long and describes how to accomplish one concrete
