Fixing errors in tex files

--- a/carpentries.tex
+++ b/carpentries.tex
@@ -107,15 +107,14 @@ actually delivered differed from our templates, what problems arose, and
 how they were addressed. Summaries are posted on our blog shortly after
 each meeting, and eventually added to our operations guide.
 
-\begin{quote}
-\subsection{How We Do Things}\label{how-we-do-things}
+\begin{challenge}{How We Do Things}{chal:how-we-do-things}
 
 Go to the
 \href{\{\{\%20site.swc\_site\%20\}\}/workshops/operations/}{operations
 guide} and read the instructions for a regular instructor and for a
 workshop host. What situations might come up that these \emph{don't}
-answer? \{: .challenge\}
-\end{quote}
+answer?
+\end{challenge}
 
 \subsubsection{What Costs What?}\label{what-costs-what}
 
@@ -275,14 +274,12 @@ its URL to the \href{\{\{\%20site.contact\%20\}\}}{workshop
 coordinator}, who adds it to our records. The workshop will show up on
 our websites shortly thereafter.
 
-\begin{quote}
-\subsection{Practice With SWC
-Infrastructure}\label{practice-with-swc-infrastructure}
+\begin{challenge}{Practice With SWC Infrastructure}{chal:practice-with-swc-infrastructure}
 
 Go to the \href{\{\{\%20site.workshop\_repo\%20\}\}}{workshop template
 repository} and follow the directions to create a workshop website using
-your local location and today's date. \{: .challenge\}
-\end{quote}
+your local location and today's date.
+\end{challenge}
 
 We also have
 \href{https://github.com/swcarpentry/windows-installer/releases/download/v0.3/SWCarpentryInstaller.exe}{a
@@ -378,12 +375,11 @@ communities:
   \end{itemize}
 \end{itemize}
 
-\begin{quote}
-\subsection{Get Connected}\label{get-connected}
+\begin{challenge}{Get Connected}{chal:get-connected}
 
 Join our discussion lists, subscribe to our blogs, and follow us on
-Twitter. \{: .challenge\}
-\end{quote}
+Twitter.
+\end{challenge}
 
 \subsubsection{A Culture of
 Contribution}\label{a-culture-of-contribution}
@@ -511,8 +507,7 @@ would like Software Carpentry to take a new direction, or would like to
 do more than teach or develop lessons, you are very welcome to put your
 name forward as a candidate.
 
-\begin{quote}
-\subsection{Feedback on Assessment}\label{feedback-on-assessment}
+\begin{challenge}{Feedback on Assessment}{chal:feedback-on-assessment}
 
 Go through the pre-assessment questionnaire given to you by your
 instructor and critique its questions. (Remember, critiquing means
@@ -520,5 +515,5 @@ commenting on positive aspects as well as negative ones.) How long do
 you think it will take the average learner to fill it in? How useful do
 you think the information it gathers will be to you as an instructor?
 How could you improve the questions? What would you add, and what would
-you drop to make room? \{: .challenge\}
-\end{quote}
+you drop to make room?
+\end{challenge}
