--- a/lessons.tex
+++ b/lessons.tex
@@ -60,15 +60,13 @@ he can re-run analyses and figure out which results may have been
 affected by changes.
 \end{quote}
 
-\begin{quote}
-\subsection{Learner Profiles}\label{learner-profiles-1}
+\begin{challenge}{Learner Profiles}{chal:learner-profiles}
 
 Read \href{\{\{\%20site.swc\_site\%20\}\}/audience/}{Software Carpentry's
 learner profiles} and then write one that describes a fictional
 colleague of your own. Who are they, what problems do they face, and how
-will this training help them? Try to be as specific as possible. \{:
-.challenge\}
-\end{quote}
+will this training help them? Try to be as specific as possible.
+\end{challenge}
 
 \subsubsection{Writing Learning
 Objectives}\label{writing-learning-objectives}
@@ -258,9 +256,7 @@ Baume's guide to
 and using good learning outcomes} is a good longer discussion of these
 issues.
 
-\begin{quote}
-\subsection{Evaluate SWC and DC Learning
-Objectives}\label{evaluate-swc-and-dc-learning-objectives}
+\begin{challenge}{Evaluate SWC and DC Learning Objectives}{chal:evaluate-swc-and-dc-learning-objectives}
 
 Your instructor has posted links to a handful of current Software and
 Data Carpentry lessons in the Etherpad. Take a minute to select one
@@ -282,10 +278,9 @@ following steps to evaluate it and reword it to make it sharper.
   Pair up to discuss your rewording or help each other with point 3 or 4
   if necessary.
 \item
-  Share the original and your re-worded learning objectives in the
-  Etherpad. \{: .challenge\}
+  Share the original and your re-worded learning objectives in the Etherpad.
 \end{enumerate}
-\end{quote}
+\end{challenge}
 
 \subsection{Reverse Instructional
 Design}\label{reverse-instructional-design}
