--- a/live.tex
+++ b/live.tex
@@ -60,23 +60,19 @@ they can view their notes and the Etherpad session. This seems to be
 more reliable than displaying one virtual desktop while flipping back
 and forth to another.
 
-\begin{quote}
-\subsection{I/We/You vs.~You/Y'all/We}\label{iweyou-vs.youyallwe}
+\begin{challenge}{I/We/You vs.~You/Y'all/We}{chal:iweyou-vs-youyallwe}
 
 Live coding is an example of the ``I/We/You'' approach to teaching
-\href{\{\{\%20page.root\%20\}\}/05-performance/}{discussed earlier}. \{:
-.callout\}
-\end{quote}
+\href{\{\{\%20page.root\%20\}\}/05-performance/}{discussed earlier}.
+\end{challenge}
 
-\begin{quote}
-\subsection{Up and Down}\label{up-and-down-1}
+\begin{challenge}{Up and Down}{chal:up-and-down}
 
 What are some of the advantages and challenges of live coding from both
-a learner's and an instructor's point of view? \{: .challenge\}
-\end{quote}
+a learner's and an instructor's point of view?
+\end{challenge}
 
-\begin{quote}
-\subsection{The Bad and the Good}\label{the-bad-and-the-good}
+\begin{challenge}{The Bad and the Good}{chal:the-bad-and-the-good}
 
 Watch this video of \href{https://youtu.be/bXxBeNkKmJE}{live coding done
 poorly} and this video of \href{https://youtu.be/SkPmwe\_WjeY}{live
@@ -84,8 +80,8 @@ coding done right} as a group and then summarize your feedback on both.
 In the videos, the bash shell \texttt{for} loop is taught, and it is
 assumed learners are familiar with how to use a variable, the
 \texttt{head}command and the content of the
-\texttt{basilisk.dat unicorn.dat} files. \{: .challenge\}
-\end{quote}
+\texttt{basilisk.dat unicorn.dat} files.
+\end{challenge}
 
 \subsection{Live Coding Top 10}\label{live-coding-top-10}
 
@@ -258,8 +254,7 @@ after something worked well is a good start. Ask your co-instructors and
 helpers for feedback when you are unsure of the effect you behaviour has
 on the workshop.
 
-\begin{quote}
-\subsection{See Then Do}\label{see-then-do}
+\begin{challenge}{See Then Do}{chal:see-then-do}
 
 Teach 3-4 minutes of your chosen lesson episode using live coding to a
 fellow trainee, then swap and watch while that person live codes for
@@ -270,8 +265,8 @@ a handheld device---but give feedback the same way you have previously
 instead teach something from the lesson episode you selected in
 preparation for this workshop, explain in advance to your fellow trainee
 what you will be teaching and what the learners you teach it to are
-expected to be familiar with. \{: .challenge\}
-\end{quote}
+expected to be familiar with.
+\end{challenge}
 
 \begin{quote}
 How does live coding compare to other kinds of demonstration-based
