--- a/load.tex
+++ b/load.tex
@@ -153,9 +153,7 @@ For example, the series of problems above illustrate the
 from a collection are repeatedly added to a single variable in some way
 to create the final result.
 
-\begin{quote}
-\subsection{Create a Faded Example from a
-Lesson}\label{create-a-faded-example-from-a-lesson}
+\begin{challenge}{Create a Faded Example from a Lesson}{chal:create-a-faded-example-from-a-lesson}
 
 The following exercise should be done in groups of 2-3.
 
@@ -171,9 +169,9 @@ The following exercise should be done in groups of 2-3.
   Write a question to test the student's ability to correctly fill in
   that blank.
 \item
-  Paste your faded example in the Etherpad. \{: .challenge\}
+  Paste your faded example in the Etherpad.
 \end{enumerate}
-\end{quote}
+\end{challenge}
 
 \subsection{Parsons Problems}\label{parsons-problems}
 
@@ -190,11 +188,9 @@ Here is a really nice online Parsons Problem interactive tool.
 \href{http://runestoneinteractive.org/LearningAtScale/parsons.html}{Try
 it out!}
 
-\begin{quote}
-\subsection{Parsons Problems}\label{parsons-problems-1}
+\begin{challenge}{Parsons Problems}{chal:parsons-problems}
 
 Write 5 or 6 lines of code that does something useful, jumble them, then
 add one more line that looks plausible but isn't needed to solve the
-problem. How well can your partner tell which line is unnecessary? \{:
-.challenge\}
-\end{quote}
+problem. How well can your partner tell which line is unnecessary?
+\end{challenge}
