--- a/memory.tex
+++ b/memory.tex
@@ -257,16 +257,15 @@ us to \emph{externalize cognition}, i.e., to get our thoughts out where
 we can see them (and see the contradictions that have happily been
 swimming around inside our heads without bumping into each other).
 
-\begin{quote}
-\subsection{Concept Mapping}\label{concept-mapping}
+\begin{challenge}{Concept Mapping}{chal:concept-mapping}
 
 Create a hand drawn concept map for something you would teach in five
 minutes. (Possibly for the same subject that you used to create a
 multiple choice question before.) Trade with a partner, and critique
 each other's maps. Do they present concepts or surface detail? Which of
 the relationships in your partner's map do you consider concepts and
-vice versa? \{: .challenge\}
-\end{quote}
+vice versa?
+\end{challenge}
 
 \begin{quote}
 \subsection{Building Concept Maps
@@ -292,9 +291,7 @@ discussion can be\ldots{}vigorous. \{: .callout\}
 
 \subsection{Seven Plus or Minus Two}\label{seven-plus-or-minus-two}
 
-\begin{quote}
-\subsection{The Serial Position
-Effect}\label{the-serial-position-effect}
+\begin{challenge}{The Serial Position Effect}{chal:the-serial-position-effect}
 
 Read the following list and try to memorize the items in it:
 
@@ -306,8 +303,8 @@ list as you can. Compare to other members of the group. What words are
 remembered the most?
 
 \href{http://cat.xula.edu/thinker/memory/working/serial}{This website}
-implements an interactive version of this exercise. \{: .challenge\}
-\end{quote}
+implements an interactive version of this exercise.
+\end{challenge}
 
 While the graph model of knowledge is inaccurate but useful, another
 simple model of knowledge has a sound physical basis. As a rough
