--- a/motivation.tex
+++ b/motivation.tex
@@ -66,9 +66,7 @@ something that learners believe they would actually do in real life. It
 is also \emph{tangible}: if the image comes out the wrong size, learners
 have a concrete starting point for debugging.
 
-\begin{quote}
-\subsection{Authentic Tasks: Think, Pair,
-Share}\label{authentic-tasks-think-pair-share}
+\begin{challenge}{Authentic Tasks: Think, Pair, Share}{chal:authentic-tasks-think-pair-share}
 
 \textbf{Think} about something you did this week that uses one or more
 of the skills we teach, (e.g.~wrote a function, bulk downloaded data,
@@ -78,9 +76,8 @@ a simplified version of it) as an exercise or example in class.
 on a 2x2 grid of ``short/longtime to master'' and ``low/high
 usefulness''? In the class Etherpad, \textbf{share} the task and where
 it fits on the 2x2 grid. As a group, we will discuss how these relate
-back to our ``teach most immediately useful first'' approach. \{:
-.challenge\}
-\end{quote}
+back to our ``teach most immediately useful first'' approach.
+\end{challenge}
 
 \subsection{Strategies for Motivating
 Learners}\label{strategies-for-motivating-learners}
@@ -109,15 +106,13 @@ examples using an authentic task that is relevant to their research. \{:
 .callout\}
 \end{quote}
 
-\begin{quote}
-\subsection{Brainstorming Motivational
-Strategies}\label{brainstorming-motivational-strategies}
+\begin{challenge}{Brainstorming Motivational Strategies}{chal:brainstorming-motivational-strategies}
 
 \emph{Think} back to a computational (or other) course you took in the
 past, and identify one thing the instructor did that motivated you.
 \emph{Pair} up with your neighbor and discuss what motivated you.
-\emph{Share} the motivational story in the Etherpad. \{: .challenge\}
-\end{quote}
+\emph{Share} the motivational story in the Etherpad.
+\end{challenge}
 
 \begin{quote}
 \subsection{Not Just Learners}\label{not-just-learners}
@@ -130,8 +125,7 @@ care about a topic in order to keep teaching it, particularly when they
 are volunteers. \{: .callout\}
 \end{quote}
 
-\begin{quote}
-\subsection{Why Do You Teach?}\label{why-do-you-teach}
+\begin{challenge}{Why Do You Teach?}{chal:why-do-you-teach}
 
 We all have a different motivation for teaching, and that is a really
 good thing! SWC wants instructors with diverse backgrounds because you
@@ -140,8 +134,8 @@ each bring something unique to our community. Read the
 other instructors, to see what motivates them to teach. After this
 class, or during a break, write a short explanation of what motivates
 you to teach. Save this as part of your teaching philosophy for future
-reference. \{: .challenge\}
-\end{quote}
+reference.
+\end{challenge}
 
 \subsection{Demotivation}\label{demotivation}
 
@@ -246,15 +240,13 @@ approach (i.e., we need to change the system because it produces these
 disparities). \{: .callout\}
 \end{quote}
 
-\begin{quote}
-\subsection{Brainstorming Demotivational
-Experiences}\label{brainstorming-demotivational-experiences}
+\begin{challenge}{Brainstorming Demotivational Experiences}{chal:brainstorming-demotivational-experiences}
 
 \emph{Think} back to a time when you demotivated a student (or when you
 were demotivated as a student). \emph{Pair} up with your neighbor and
 discuss what you could have done differently in the situation.
-\emph{Share} the demotivational story in the Etherpad. \{: .challenge\}
-\end{quote}
+\emph{Share} the demotivational story in the Etherpad.
+\end{challenge}
 
 \begin{quote}
 \subsection{Never Learn Alone}\label{never-learn-alone}
@@ -471,8 +463,7 @@ term-long courses, many can be applied in our workshops, such as:
   display knowledge.
 \end{itemize}
 
-\begin{quote}
-\subsection{Pick One}\label{pick-one}
+\begin{challenge}{Pick One}{chal:pick-one}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -483,6 +474,6 @@ term-long courses, many can be applied in our workshops, such as:
   paper} that you would like to work on.
 \item
   Put a reminder in your calendar three months in the future to
-  self-check whether you have done something about it. \{: .challenge\}
+  self-check whether you have done something about it.
 \end{enumerate}
-\end{quote}
+\end{challenge}
