--- a/novice.tex
+++ b/novice.tex
@@ -372,14 +372,12 @@ learn---time that we don't have in our compressed two-day format. \{:
 .callout\}
 \end{quote}
 
-\begin{quote}
-\subsection{Modeling Novice Mental
-Models}\label{modeling-novice-mental-models}
+\begin{challenge}{Modeling Novice Mental Models}{chal:modeling-novice-mental-models}
 
 Create a multiple choice question related to a topic you intend to teach
 and explain the diagnostic power of each its distractors, i.e., what
-misconception is each distractor meant to identify? \{: .challenge\}
-\end{quote}
+misconception is each distractor meant to identify?
+\end{challenge}
 
 \begin{quote}
 \subsection{A Note on MCQ Design}\label{a-note-on-mcq-design}
