--- a/performance.tex
+++ b/performance.tex
@@ -187,17 +187,15 @@ it allows learners to see the ``how'' as well as the ``what''. \{:
 .callout\}
 \end{quote}
 
-\begin{quote}
-\subsection{Giving Feedback}\label{giving-feedback}
+\begin{challenge}{Giving Feedback}{chal:giving-feedback}
 
 Watch \href{https://www.youtube.com/watch?v=-ApVt04rB4U}{this video} as
 a group and then give feedback on it. Try to organize feedback along two
 axes: positive vs.~negative and content (what was said) vs.~presentation
-(how it was said). \{: .challenge\}
-\end{quote}
+(how it was said).
+\end{challenge}
 
-\begin{quote}
-\subsection{Feedback on Yourself}\label{feedback-on-yourself}
+\begin{challenge}{Feedback on Yourself}{chal:feedback-on-yourself}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -221,9 +219,8 @@ axes: positive vs.~negative and content (what was said) vs.~presentation
 \item
   After everyone has given feedback on all of the videos, return to the
   main group and put everyone's feedback about you into the Etherpad.
-  \{: .challenge\}
 \end{enumerate}
-\end{quote}
+\end{challenge}
 
 \subsection{On Stage}\label{on-stage}
 
@@ -335,8 +332,7 @@ self-critical person, it's OK to remind yourself that:
   Etc.
 \end{itemize}
 
-\begin{quote}
-\subsection{Feedback on Feedback}\label{feedback-on-feedback}
+\begin{challenge}{Feedback on Feedback}{chal:feedback-on-feedback}
 
 Watch either \href{https://vimeo.com/139316669}{this video} (8:40) or
 \href{https://vimeo.com/139181120}{this one} (11:42). Take notes about
@@ -344,20 +340,17 @@ the presentation, and divide those into four groups based on whether
 they are positive or negative and whether they are about the content
 (what was said) or the presentation (how it was said, e.g., body
 language). Compare your notes with those made by other people, and with
-the feedback given by your instructor. \{: .challenge\}
-\end{quote}
+the feedback given by your instructor.
+\end{challenge}
 
-\begin{quote}
-\subsection{Feedback on Yourself, Part
-II}\label{feedback-on-yourself-part-ii}
+\begin{challenge}{Feedback on Yourself, Part II}{chal:feedback-on-yourself-part-ii}
 
 Later in the training, repeat the first challenge exercise; however,
 when it comes time to give feedback, use the same 2x2 scheme in the
-previous challenge. \{: .challenge\}
-\end{quote}
+previous challenge.
+\end{challenge}
 
-\begin{quote}
-\subsection{Learn More About Feedback}\label{learn-more-about-feedback}
+\begin{challenge}{Learn More About Feedback}{chal:learn-more-about-feedback}
 
 Read Gormally et al's
 ``\href{\{\{\%20page.root\%20\}\}/files/papers/gormally-teaching-feedback-2014.pdf}{Feedback
@@ -365,11 +358,10 @@ about Teaching in Higher Ed}'' and discuss ways you could make
 peer-to-peer feedback a routine part of your teaching. You may also
 enjoy Gawande's
 ``\href{http://www.newyorker.com/magazine/2011/10/03/personal-best}{Personal
-Best}'', which looks at the value of having a coach. \{: .challenge\}
-\end{quote}
+Best}'', which looks at the value of having a coach.
+\end{challenge}
 
-\begin{quote}
-\subsection{Fill In Minute Cards}\label{fill-in-minute-cards}
+\begin{challenge}{Fill In Minute Cards}{chal:fill-in-minute-cards}
 
 We frequently use sticky notes as \emph{minute cards}: before each
 break, learners take a minute to write one positive thing on the green
@@ -386,5 +378,5 @@ Write one thing you learned this morning that you found useful on your
 green sticky note, and one question you have about the material on the
 red. Do \emph{not} put your name on the notes: this is meant to be
 anonymous feedback. Add your notes to the pile by the door as you leave
-to get coffee. \{: .challenge\}
-\end{quote}
+to get coffee.
+\end{challenge}
