--- a/welcome.tex
+++ b/welcome.tex
@@ -5,13 +5,12 @@ Introductions set the stage for learning.\\--- Tracy Teal, Executive
 Director, Data Carpentry
 \end{quote}
 
-\begin{quote}
-\subsection{Favorite Class}\label{favorite-class}
+\begin{challenge}{Favorite Class}{chal:favorite-class}
 
 In the Etherpad, write down your name, the best class you ever took (or
 one class from your top ten, if you can't decide), and what made it so
-great. \{: .challenge\}
-\end{quote}
+great.
+\end{challenge}
 
 Hello everyone, and welcome to the Data Carpentry and Software Carpentry
 instructor training. We're very pleased to have you with us.
