--- a/book.tex
+++ b/book.tex
@@ -6,6 +6,7 @@
 \newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\includegraphics}[1]{\textbf{#1}}
 
+\newenvironment{challenge}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
 \newenvironment{discussion}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
 
 \title{A Short Guide to Teaching}
